--- a/index.html
+++ b/index.html
@@ -1,193 +1,207 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>      
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-      <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
-      <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
-      <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet" >
-      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-      <link rel="stylesheet" href="css/index.css" />
-      <link rel="stylesheet" href="css/header.css" />
-      <link rel="stylesheet" href="css/footer.css" />
-      <title>TechTitans</title>
-   </head>
-   <header>
-      <div class="header">
-         <div class="logo">
-            <img src="img/logo.png" alt="Logo" />
-            <div class="company-name"><a>Tech Titans</div>
-         </div>
-         <div class="subpages">
-            <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
-            <a href="solutions.html" class="subpage-item">Solutions</a>
-            <a href="vision.html" class="subpage-item">Vision</a>
-            <a href="software.html" class="subpage-item">Software</a>
-            <!-- <a href="#" class="subpage-item">Blog</a> -->
-         </div>
-         <div class="dropdown">
-            <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-               <img src="img/globe.png" alt="Lang" /> 
-            </a>
-            <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-               <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt="">  English</a>
-               <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt="">  Russian</a>
-               <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt="">  Romanian</a>
-               <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt="">  Ukrainian</a>
-            </div>
-         </div>
-         <div class="hamburger" id="hamburger">
-            <span class="bar"></span>
-            <span class="bar"></span>
-            <span class="bar"></span>
+
+<head>
+   <meta charset="UTF-8" />
+   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
+      integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous">
+   </script>
+   <script src="https://cdn.jsdelivr.net/npm/popper.js@1.14.7/dist/umd/popper.min.js"
+      integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous">
+   </script>
+   <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.3.1/dist/js/bootstrap.min.js"
+      integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous">
+   </script>
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+   <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css" />
+   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" />
+   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css" rel="stylesheet">
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+   <link rel="stylesheet" href="css/index.css" />
+   <link rel="stylesheet" href="css/header.css" />
+   <link rel="stylesheet" href="css/footer.css" />
+   <title>TechTitans</title>
+</head>
+<header>
+   <div class="header">
+      <div class="logo">
+         <img src="img/logo.png" alt="Logo" />
+         <div class="company-name"><a>Tech Titans</div>
+      </div>
+      <div class="subpages">
+         <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
+         <a href="solutions.html" class="subpage-item">Solutions</a>
+         <a href="vision.html" class="subpage-item">Vision</a>
+         <a href="software.html" class="subpage-item">Software</a>
+         <!-- <a href="#" class="subpage-item">Blog</a> -->
+      </div>
+      <div class="dropdown">
+         <a class="btn btn-secondary dropdown-toggle shadow-none btn-custom-color" href="#" role="button"
+            id="dropdownMenuLink" data-toggle="dropdown">
+            <img src="img/globe.png" alt="Lang" />
+         </a>
+         <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+            <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt=""> English</a>
+            <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt=""> Russian</a>
+            <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt=""> Romanian</a>
+            <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt=""> Ukrainian</a>
          </div>
       </div>
-      <div class="panel" id="panel">
-         <div class="mobile-subpages">
-            <div>
-               <div class="dropdown">
-                  <a class="mobile-btn mobile-btn-secondary dropdown-toggle " href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown">
-                     <img src="img/globe.png" alt="Lang" /> 
-                  </a>
-                  <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
-                     <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt="">  English</a>
-               <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt="">  Russian</a>
-               <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt="">  Romanian</a>
-               <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt="">  Ukrainian</a>
+      <div class="hamburger" id="hamburger">
+         <span class="bar"></span>
+         <span class="bar"></span>
+         <span class="bar"></span>
+      </div>
+   </div>
+   <div class="panel" id="panel">
+      <div class="mobile-subpages">
+         <div>
+            <div class="dropdown">
+               <a class="mobile-btn mobile-btn-secondary dropdown-toggle " href="#" role="button" id="dropdownMenuLink"
+                  data-toggle="dropdown">
+                  <img src="img/globe.png" alt="Lang" />
+               </a>
+               <div class="dropdown-menu" aria-labelledby="dropdownMenuLink">
+                  <a class="dropdown-item" href="#"><img src="img/gb.svg" width="20" height="15" alt=""> English</a>
+                  <a class="dropdown-item" href="#"><img src="img/ru.svg" width="20" height="15" alt=""> Russian</a>
+                  <a class="dropdown-item" href="#"><img src="img/md.svg" width="20" height="15" alt=""> Romanian</a>
+                  <a class="dropdown-item" href="#"><img src="img/ua.svg" width="20" height="15" alt=""> Ukrainian</a>
+               </div>
+            </div>
+         </div>
+         <div class="divider"></div>
+         <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
+         <a href="solutions.html" class="subpage-item">Solutions</a>
+         <a href="vision.html" class="subpage-item">Vision</a>
+         <a href="software.html" class="subpage-item">Software</a>
+         <a href="#" class="subpage-item">Blog</a>
+      </div>
+   </div>
+</header>
+
+<body>
+   <div class="page-wrapper">
+      <section>
+         <div class="welcome">
+            <img src="img/office.png" alt="card" />
+            <div class="about">
+               <h2>Welcome</h2>
+               <p>Tech Titans is here to revolutionize the world of financial and administrative software development.
+                  With our technology and experienced professionals, we make it easy to take your business to the next
+                  level.</p>
+               <p>Get ready to experience the power of Tech Titans</p>
+            </div>
+         </div>
+      </section>
+      <section>
+         <div class="short-desc">
+            <p>Unlock the Power of Tech Titans'</p>
+            <p>Administrative Software</p>
+            <p>Development Services</p>
+         </div>
+         <div class="background-img">
+            <div class="background-img-inner"></div>
+         </div>
+      </section>
+      <section>
+         <div class="team">
+            <div class="content">
+               <h2><b>Our Team.</b></h2>
+               <p id="description">
+                  Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
+                  ambitious minds working collaboratively to bring your wildest dreams to life.
+               </p>
+            </div>
+            <div class="cards">
+               <div class="column">
+                  <div class="imageBox"><img src="img/user1.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-1">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+                  <div class="imageBox"><img src="img/user2.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-2">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+                  <div class="imageBox"><img src="img/user3.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-3">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
+                  </div>
+                  <div class="imageBox"><img src="img/user4.png" style="width: 100%; height: auto;" /></div>
+                  <div class="text-block-4">
+                     <h4>Name Name</h4>
+                     <p>Job Title</p>
                   </div>
                </div>
             </div>
-            <div class="divider"></div>
-            <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
-            <a href="solutions.html" class="subpage-item">Solutions</a>
-            <a href="vision.html" class="subpage-item">Vision</a>
-            <a href="software.html" class="subpage-item">Software</a>
-            <a href="#" class="subpage-item">Blog</a>
+         </div>
+      </section>
+      <section class="directions">
+         <div class="our-directions">
+            <p>Our direction and promising</p>
+            <p>areas of development</p>
+         </div>
+         <div class="text-cards">
+            <div class="text-block-5">
+               <p>
+                  FINANCIAL<br />
+                  SOFTWARE
+               </p>
+            </div>
+            <img src="img/financial.png" alt="" />
+            <div class="text-block-6">
+               <p>
+                  ADMINISTRATIVE<br />
+                  SOFTWARE
+               </p>
+            </div>
+            <img src="img/technical.png" alt="" />
+            <div class="text-block-7">
+               <p>
+                  GAMING<br />
+                  DEVELOPMENT
+               </p>
+            </div>
+         </div>
+         <div class="read-more">
+            <p>Read more about our solution in <a href="solutions.html">Solution</a> and <a
+                  href="vision.html">Vision</a> tabs.</p>
+         </div>
+      </section>
+   </div>
+</body>
+<footer>
+   <div class="footer-wrapper">
+      <div class="footer-section">
+         <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
+         <p class="company-description">Tut dannie dlya nashei company</p>
+      </div>
+      <div class="footer-section" id="buttons">
+         <div class="href-buttons">
+            <a href="solutions.html" class="footer-button">Solutions</a>
+            <a href="solutions.html" class="footer-button">Services</a>
+            <a href="vision.html" class="footer-button">About us</a>
+            <!-- <a href="#" class="footer-button">Blog</a> -->
+            <div class="footer-button">
+            </div>
+            <button onclick="window.location.href='contact-us.html';">Contact us</button>
          </div>
       </div>
-   </header>
-   <body>
-      <div class="page-wrapper">
-         <section>
-            <div class="welcome">
-               <img src="img/office.png" alt="card" />
-               <div class="about">
-                  <h2>Welcome</h2>
-                  <p>Tech Titans is here to revolutionize the world of financial and administrative software development. With our technology and experienced professionals, we make it easy to take your business to the next level.</p>
-                  <p>Get ready to experience the power of Tech Titans</p>
-               </div>
-            </div>
-         </section>
-         <section>
-            <div class="short-desc">
-               <p>Unlock the Power of Tech Titans'</p>
-               <p>Administrative Software</p>
-               <p>Development Services</p>
-            </div>
-            <div class="background-img">
-               <div class="background-img-inner"></div>
-            </div>
-         </section>
-         <section>
-            <div class="team">
-               <div class="content">
-                  <h2><b>Our Team.</b></h2>
-                  <p id="description">
-                     Our team of juniors and creators are the best of the best, a group of diverse, young, <br />
-                     ambitious minds working collaboratively to bring your wildest dreams to life.
-                  </p>
-               </div>
-               <div class="cards">
-                  <div class="column">
-                     <div class="imageBox"><img src="img/user1.png" style="width: 100%; height: auto;" /></div>
-                     <div class="text-block-1">
-                        <h4>Name Name</h4>
-                        <p>Job Title</p>
-                     </div>
-                     <div class="imageBox"><img src="img/user2.png" style="width: 100%; height: auto;" /></div>
-                     <div class="text-block-2">
-                        <h4>Name Name</h4>
-                        <p>Job Title</p>
-                     </div>
-                     <div class="imageBox"><img src="img/user3.png" style="width: 100%; height: auto;" /></div>
-                     <div class="text-block-3">
-                        <h4>Name Name</h4>
-                        <p>Job Title</p>
-                     </div>
-                     <div class="imageBox"><img src="img/user4.png" style="width: 100%; height: auto;" /></div>
-                     <div class="text-block-4">
-                        <h4>Name Name</h4>
-                        <p>Job Title</p>
-                     </div>
-                  </div>
-               </div>
-            </div>
-         </section>
-         <section class="directions">
-            <div class="our-directions">
-               <p>Our direction and promising</p>
-               <p>areas of development</p>
-            </div>
-            <div class="text-cards">
-               <div class="text-block-5">
-                  <p>
-                     FINANCIAL<br />
-                     SOFTWARE
-                  </p>
-               </div>
-               <img src="img/financial.png" alt="" />
-               <div class="text-block-6">
-                  <p>
-                     ADMINISTRATIVE<br />
-                     SOFTWARE
-                  </p>
-               </div>
-               <img src="img/technical.png" alt="" />
-               <div class="text-block-7">
-                  <p>
-                     GAMING<br />
-                     DEVELOPMENT
-                  </p>
-               </div>
-            </div>
-            <div class="read-more">
-               <p>Read more about our solution in <a href="solutions.html">Solution</a> and <a href="vision.html">Vision</a> tabs.</p>
-            </div>
-         </section>
+      <div class="footer-section"></div>
+      <div class="footer-section" id="social">
+         <p>Follow Us On:</p>
+         <div class="social-icons">
+            <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
+         </div>
+         <span class="footer-info">© 2022 Tech Titans. All rights reserved.</span>
       </div>
-   </body>
-   <footer>
-      <div class="footer-wrapper">
-         <div class="footer-section">
-            <p class="company-name"><img src="img/footer.png" alt="footer" class="footer-logo" />TechTitans</p>
-            <p class="company-description">Tut dannie dlya nashei company</p>
-         </div>
-         <div class="footer-section" id="buttons">
-            <div class="href-buttons">
-               <a href="solutions.html" class="footer-button">Solutions</a>
-               <a href="solutions.html" class="footer-button">Services</a>
-               <a href="vision.html" class="footer-button">About us</a>
-               <!-- <a href="#" class="footer-button">Blog</a> -->
-               <div class="footer-button">
-               </div>
-               <button onclick="window.location.href='contact-us.html';">Contact us</button>
-            </div>
-         </div>
-         <div class="footer-section"></div>
-         <div class="footer-section" id="social">
-            <p>Follow Us On:</p>
-            <div class="social-icons">
-               <i class="fab fa-linkedin"></i><i class="fab fa-facebook"></i><i class="fab fa-twitter"></i>
-            </div>
-            <span class="footer-info">© 2022 Tech Titans. All rights reserved.</span>
-         </div>
-      </div>
-   </footer>
-   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-   <script src="script/script.js"></script>
-   <script src="script/index.js"></script>
+   </div>
+</footer>
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script src="script/script.js"></script>
+<script src="script/index.js"></script>
+
 </html>
