--- a/index.html
+++ b/index.html
@@ -21,6 +21,38 @@
    <link rel="stylesheet" href="css/index.css" />
    <link rel="stylesheet" href="css/header.css" />
    <link rel="stylesheet" href="css/footer.css" />
+   <style>
+      @font-face {
+    font-family: "Donpoligrafbum";
+    src: url(./public/Donpoligrafbum-Bold.otf);
+   }
+
+   @font-face {
+    font-family: "Visitor";
+    src: url(./public/VisitorRus.ttf);
+   }
+
+   @font-face {
+    font-family: "Shentox";
+    src: url(./public/ShentoxTRIAL-Md.otf);
+   }
+
+   @font-face {
+    font-family: "Nevduplenysh";
+    src: url(./public/Nevduplenysh-Regular.otf);
+   }
+
+   @font-face {
+    font-family: "IntelOneMono";
+    src: url(./public/intelone-mono-font-family-regular.ttf);
+   }
+
+   @font-face {
+    font-family: "Distroy23";
+    src: url(./public/distroy.23.ttf);
+   }
+
+   </style>
    <title>TechTitans</title>
 </head>
 <header>
