--- a/software.html
+++ b/software.html
@@ -23,10 +23,10 @@
             <div class="company-name">Tech Titans</div>
          </div>
          <div class="subpages">
-            <a href="#" class="subpage-item" style="color: #729fce;">Home</a>
+            <a href="index.html" class="subpage-item">Home</a>
             <a href="solutions.html" class="subpage-item">Solutions</a>
             <a href="vision.html" class="subpage-item">Vision</a>
-            <a href="software.html" class="subpage-item">Software</a>
+            <a href="software.html" class="subpage-item" style="color: #729fce;">Software</a>
             <!-- <a href="#" class="subpage-item">Blog</a> -->
          </div>
          <div class="dropdown">
