--- a/vision.html
+++ b/vision.html
@@ -32,7 +32,7 @@
       <div class="subpages">
          <a href="index.html" class="subpage-item">Home</a>
          <a href="solutions.html" class="subpage-item">Solutions</a>
-         <a href="#" class="subpage-item">Vision</a>
+         <a href="vision.html" class="subpage-item" style="color: #729fce;">Vision</a>
          <a href="software.html" class="subpage-item  style=" color: #729fce;">Software</a>
          <!-- <a href="#" class="subpage-item">Blog</a> -->
       </div>
